docs: final version

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CV</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <h2>Natallia Melnichuk </h2>
